# Compiler-Lab

./: .gitignore  CMakeLists.txt  report.md
Code/: .gitignore  CMakeLists.txt  debug.h  generate.c  lexical.l  main.c  multitree.c  multitree.h  multitree_head.c  out1.ir  semantic.c  semantic.h  symbol.c  symbol.h  syntax.y  test_struct.c  translate.c  translate.h
Test/: result.txt  rtest5.txt  test.cmm  test21.cmm  test22.cmm  test24.cmm  test25.cmm
Test/auto_test/: test.sh  usage.sh
Test/intercode_test/: test2.cmm  test_op1.cmm
Test/intercode_test/Tests_normal/inputs/: E2-1.cmm
Test/intercode_test/my_test/: test1.cmm  test2.cmm
Test/senamic_test/jlj_test/: test3.cmm
Test/senamic_test/zzm_test/: test1.cmm  test10.cmm  test2.cmm  test3.cmm  test4.cmm  test5.cmm  test7.cmm  test8.cmm  test9.cmm
Test/syntax_test/: test.cmm  test1.cmm  test21.cmm  test23.cmm
report/: report.md
